# mcp-alpha-vantage

./: .gitignore  Makefile  pyproject.toml  pyrightconfig.json  requirements.txt  server.py
.github/workflows/: test.yml
src/: __init__.py  client.py  config.py  models.py  server.py
tests/: test_client.py
